# $Id:  $

dnl Process this file with autoconf to produce a configure script

AC_INIT(hits.cpp)
AM_INIT_AUTOMAKE(hits, 0.1)
AC_PROG_CXX
AC_LANG_CPLUSPLUS
AC_PROG_CC
AC_PROG_INSTALL
#AC_ARG_PROGRAM

# We need ranlib to make the library, and we need to define make
AC_PROG_RANLIB
AC_PROG_MAKE_SET

# Check for GTL
AC_CHECK_HEADERS(GTL/GTL.h)

AC_OUTPUT(Makefile graph/Makefile )

